[project]
name = "polymwk"
version = "0.1.0"
description = "Clean Python library for Polymarket data — events, markets, whale tracking, history, and live feed."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polymarket-apis==0.5.7",
    "truststore>=0.9",
    "pydantic>=2.0",
    "polars>=0.20",
    "httpx>=0.27",
    "plotille>=6.0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["polymwk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
